Added rrule to generate dates

--- a/package.json
+++ b/package.json
@@ -17,12 +17,14 @@
     "bcryptjs": "^2.4.3",
     "body-parse": "^0.1.0",
     "cors": "^2.8.5",
+    "date-fns": "^2.29.1",
     "dotenv": "^12.0.4",
     "express": "^4.17.2",
     "jsonwebtoken": "^8.5.1",
     "mongodb": "^4.3.0",
     "mongoose": "^6.1.6",
     "nodemon": "^2.0.15",
+    "rrule": "^2.7.1",
     "save": "^2.4.0",
     "validator": "^13.7.0"
   }
